{
    "name": "PlayerController",
    "maps": [
        {
            "name": "Player",
            "id": "bf3fc421-f350-4508-a282-e8176590bfa9",
            "actions": [
                {
                    "name": "Charge",
                    "type": "Button",
                    "id": "07366644-1aa8-4e34-936e-02fec5ea0078",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LeanLeft",
                    "type": "Button",
                    "id": "1fe2767f-334f-4c2a-aae6-a8354d3784d2",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LeanRight",
                    "type": "Button",
                    "id": "4f7715dd-2fea-4130-bc49-4f801ece4a55",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "3f38af8d-0753-4275-965e-5c2dfc9f7fce",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Charge",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2598cb33-5d00-4ecb-a378-ed824af90088",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeanLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "dc938d27-d5d8-492c-92bc-9078d410fc3d",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeanRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}